--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,15 @@ background-color:black ;
 
 
 #board {
-  margin-top: 30px;
-  margin-left: auto;
+    margin-top: 30px;
+    margin-left: auto;
     margin-right: auto;
     width: 375px;
     height: 375px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 5px;
+    
   
    
 }
@@ -69,29 +70,30 @@ background-color:black ;
 .scores {
   display: flex;
   justify-content: center;
+  /* justify-content: space-evenly; */
  
 }
 
 .x {
-  margin-right: 150px;
+  margin-right: 10%;
   color: #e62e00;
   font-size: 20px;
   font-weight: 800;
+ 
 }
 
 .o {
-  margin-left: 150px;
+  /* margin-left: 150px; */
   color: #e62e00;
   font-size: 20px;
   font-weight: 800;
+ 
 }
 .first-div {
-
   display: flex;
   justify-content: center;
-  /* padding: 150px 150px 150px 150px; */
-  margin-left: 300px;
-  margin-right: 300px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
   background-color: rgb(230, 46, 0) ;
   flex-direction: column;
   align-items: center;
